[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/brick .tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/mario.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/test.gd" type="Script" id=3]
[ext_resource path="res://scenes/box.tscn" type="PackedScene" id=4]

[node name="test" type="Node2D"]
script = ExtResource( 3 )

[node name="brick " parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 300 )

[node name="brick 2" parent="." instance=ExtResource( 1 )]
position = Vector2( 208, 300 )

[node name="brick 3" parent="." instance=ExtResource( 1 )]
position = Vector2( 176, 300 )

[node name="brick 4" parent="." instance=ExtResource( 1 )]
position = Vector2( 144, 300 )

[node name="brick 5" parent="." instance=ExtResource( 1 )]
position = Vector2( 112, 300 )

[node name="brick 6" parent="." instance=ExtResource( 1 )]
position = Vector2( 80, 300 )

[node name="brick 7" parent="." instance=ExtResource( 1 )]
position = Vector2( 48, 300 )

[node name="brick 8" parent="." instance=ExtResource( 1 )]
position = Vector2( 304, 300 )

[node name="brick 9" parent="." instance=ExtResource( 1 )]
position = Vector2( 272, 300 )

[node name="brick 10" parent="." instance=ExtResource( 1 )]
position = Vector2( 240, 300 )

[node name="brick 11" parent="." instance=ExtResource( 1 )]
position = Vector2( 368, 300 )

[node name="brick 12" parent="." instance=ExtResource( 1 )]
position = Vector2( 336, 300 )

[node name="brick 13" parent="." instance=ExtResource( 1 )]
position = Vector2( 400, 300 )

[node name="brick 14" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, 300 )

[node name="brick 15" parent="." instance=ExtResource( 1 )]
position = Vector2( 432, 268 )

[node name="Button" type="Button" parent="."]
margin_left = 299.205
margin_top = 6.63425
margin_right = 373.205
margin_bottom = 26.6343
text = "small2big"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 426.419
margin_top = 8.07314
margin_right = 472.419
margin_bottom = 28.0731
text = "tofire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 506.831
margin_top = 10.833
margin_right = 580.831
margin_bottom = 30.833
text = "invincible"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mario" parent="." instance=ExtResource( 2 )]

[node name="box" parent="." instance=ExtResource( 4 )]
position = Vector2( 108, 220 )

[node name="box2" parent="." instance=ExtResource( 4 )]
position = Vector2( 179, 220 )

[node name="box3" parent="." instance=ExtResource( 4 )]
position = Vector2( 147, 220 )

[node name="box4" parent="." instance=ExtResource( 4 )]
position = Vector2( 213, 220 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
